# boatbroker

./: .env  .pre-commit-config.yaml  .sqlfluff  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.sqlx/: query-4fa7bb0968ee8b15f8ea9dc1d3dd07b57263e36db2c68208188763732aa17b90.json  query-c6f96ceee11c68fbd1ab9a67f2d2ee10ee788d966c245697a74dc6c059b7f479.json
migrations/: 001-uuid-ossp.sql  002-auth.sql  20231108065825_base-schema.sql  20231108065902_auth.sql  README.md
src/: api.rs  auth.rs  main.rs  state.rs
src/api/: auth.rs  state.rs
src/auth/: mod.rs  password.rs  routes.rs  tokens.rs
