[package]
name = "boatbroker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
chrono = "0.4"
hmac = "0.12"
jwt = "0.16"
pbkdf2 = { version = "0.12", features = ["simple"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.7", features = [
  "chrono",
  "macros",
  "runtime-tokio",
  "postgres",
  "uuid",
] }
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "signal"] }
